--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -18,4 +18,5 @@ jobs:
         gem install bundler
         bundle install --jobs 4 --retry 3
         bundle exec rake
+        bundle exec rake rubocop
         # add linting
