--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -19,4 +19,4 @@ jobs:
         bundle install --jobs 4 --retry 3
         bundle exec rake
         bundle exec rake rubocop
-        # add linting
+        bundle exec rake reek
