--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -18,3 +18,7 @@ jobs:
         gem install bundler
         bundle install --jobs 4 --retry 3
         bundle exec rake
+    - name: Rubocop Linter Action
+      uses: andrewmcodes/rubocop-linter-action@v1.0.4
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
