--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -6,13 +6,17 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        ruby-version: [2.4.x, 2.5.x, 2.6.x]
 
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Ruby 2.6
+    - name: Use Ruby ${{ matrix.ruby-version }}
       uses: actions/setup-ruby@v1
       with:
-        ruby-version: 2.6.x
+        ruby-version: ${{ matrix.ruby-version }}
     - name: Build and test with Rake
       run: |
         gem install bundler
